# pdf-extratext

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  test_main.py
app/: routers.py
config/: README.md  settings.py
frontend/: index.html
pdf-extratext/: .dockerignore  README.md  docker-compose.yml  pyproject.toml
pdf-extratext/app/: README.md
pdf-extratext/config/: database.py
pdf-extratext/service/: README.md  pdf_service.py
repository/: README.md  db_repo.py
service/: pdf_service.py
