[project]
name = "pdf-extratext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "ollama>=0.6.1",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "pypdf2>=3.0.1",
    "uvicorn>=0.43.0",
]
