[project]
name = "pdf-extratext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "pdfplumber>=0.11.9",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "pypdf2>=3.0.1",
    "pytest>=9.0.3",
    "python-multipart>=0.0.26",
    "uvicorn>=0.43.0",
]
